--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>1.6.4-R2.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.12.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
