--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>net.daboross.bukkitdev</groupId>
     <artifactId>bukkit-save-timer</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Save Timer</name>
@@ -29,7 +29,7 @@
         <url>https://github.com/daboross/bukkit-save-timer.git</url>
         <connection>scm:git:https://github.com/daboross/bukkit-save-timer.git</connection>
         <developerConnection>scm:git:git@github.com:daboross/bukkit-save-timer.git</developerConnection>
-        <tag>bukkit-save-timer-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
     <properties>
         <netbeans.hint.license>gpl30</netbeans.hint.license>
